--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,13 @@
 <h1>All Contacts</h1>
 
-<ul>
+<table>
+  <thead><tr><th>Name</th><th>Action</th></tr>
+  <tfoot><tr><td colspan=2><button type="button"><a href="/contacts/new">Add New</a></button>
+    </td></tr></tfoot>
+  <tbody>
   <% @contacts.each do |contact| %>
-  <li><%= contact.name %></li>
+  <tr><td><%= contact.name %></td><td><a href="/contacts/<%= contact.id %>">View</a>
+                          <a href="/contacts/<%= contact.id %>/edit">Edit</a></td><tr>
   <% end %>
-</ul>
+</tbody>
+</table>
