--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -3,3 +3,10 @@
 <p>Phone: <%= @contact.phone %></p>
 
 <p>Email: <%= @contact.email %></p>
+
+<p><a href="/contacts/<%= @contact.id %>"
+  data-confirm="You sure?"
+  data-method="delete"
+  rel="nofollow">Delete</a></p>
+
+<p><a href="/contacts">Return to contact listing</a></p>
