--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,22 +1,35 @@
-<h1>Edit contact</h1>
-<% if @contact.errors.any? %>
-<h3>Please fix these errors:</h3>
-<ul>
-  <% @contact.errors.full_messages.each do |message| %>
-  <li><%= message %></li>
-  <% end %>
-</ul>
-<% end %>
+<div class="container">
 
-<form action="/contacts/<%= @contact.id %>" method="post">
-  <input name="_method" type="hidden" value="patch">
-  <label for="contact_name">Name</label>
-  <input id="contact_name" name="name" type="text" value="<%= @contact.name %>">
-  <label for="contact_phone">Phone</label>
-  <input id="contact_phone" name="phone" type="text" value="<%= @contact.phone %>">
-  <label for="contact_email">Email</label>
-  <input id="contact_email" name="email" type="text" value="<%= @contact.email %>">
-  <button>Update Contact</button>
-</form>
+  <div class="row">
+    <h1>Edit contact</h1>
+    <% if @contact.errors.any? %>
+    <h3>Please fix these errors:</h3>
+    <ul>
+      <% @contact.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  </div>
 
-<p><a href="/contacts">Return to contact listing</a></p>
+  <div class="row">
+    <form action="/contacts/<%= @contact.id %>" method="post">
+      <input name="_method" type="hidden" value="patch">
+      <div class="form-group">
+        <label for="contact_name">Name</label>
+        <input id="contact_name" name="name" type="text" value="<%= @contact.name %>">
+      </div>
+      <div class="form-group">
+        <label for="contact_phone">Phone</label>
+        <input id="contact_phone" name="phone" type="text" value="<%= @contact.phone %>">
+      </div>
+      <div class="form-group">
+        <label for="contact_email">Email</label>
+        <input id="contact_email" name="email" type="text" value="<%= @contact.email %>">
+      </div>
+      <button class="btn btn-primary">Update Contact</button>
+      <p><a href="/contacts">Return to contact listing</a></p>
+    </form>
+  </div>
+
+</div>
