--- a/app/views/contacts/success.html.erb
+++ b/app/views/contacts/success.html.erb
@@ -1,7 +1,12 @@
-<h1>Contact saved!</h1>
+<div class="container">
 
-<p>Your contact was successfully saved.</p>
+  <div class="row">
+    <h1>Contact saved!</h1>
 
-<p><a href="/contacts/<%= @contact.id %>">View <%= @contact.name %></a></p>
+    <p>Your contact was successfully saved.</p>
 
-<p><a href="/contacts">Return to contact listing</a></p>
+    <p><a href="/contacts/<%= @contact.id %>">View <%= @contact.name %></a></p>
+
+    <p><a href="/contacts">Return to contact listing</a></p>
+  </div>
+</div>
