--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,22 +1,27 @@
-<h1>New contact</h1>
-<% if @contact.errors.any? %>
-<h3>Please fix these errors:</h3>
-<ul>
-  <% @contact.errors.full_messages.each do |message| %>
-  <li><%= message %></li>
-  <% end %>
-</ul>
-<% end %>
+<div class="container">
 
-<form action="/contacts" method="post">
-  <label for="contact_name">Name</label>
-  <input id="contact_name" name="name" type="text">
-  <label for="contact_phone">Phone</label>
-  <input id="contact_phone" name="phone" type="text">
-  <label for="contact_email">Email</label>
-  <input id="contact_email" name="email" type="text">
-  <button>Create Contact</button>
+  <div class="row">
+    <h1>New contact</h1>
+    <% if @contact.errors.any? %>
+    <h3>Please fix these errors:</h3>
+    <ul>
+      <% @contact.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+    
+    <form action="/contacts" method="post">
+      <label for="contact_name">Name</label>
+      <input id="contact_name" name="contact[name]" type="text">
+      <label for="contact_phone">Phone</label>
+      <input id="contact_phone" name="contact[phone]" type="text">
+      <label for="contact_email">Email</label>
+      <input id="contact_email" name="contact[email]" type="text">
+      <button>Create Contact</button>
 
-  <p><a href="/contacts">Return to contact listing</a></p>
+      <p><a href="/contacts">Return to contact listing</a></p>
 
-</form>
+    </form>
+  </div>
+</div>
